# DuChess

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/: bitboard.h  compiler_macros.h  constants.h  position.h  types.h  zobrist.h
src/: CMakeLists.txt  bitboard.cpp  main.cpp  position.cpp  types.cpp  zobrist.cpp
tests/: CMakeLists.txt  bitboard_test.cpp  position_test.cpp  types_test.cpp  zobrist_test.cpp
